# segPipeline

./: .gitignore  AGENTS_human_matting_pipeline.md  CLAUDE.md  CODEMAP_zh.md  CODE_TARGETS_MEM_zh.md  DATASET_STRATEGY_zh.md  MODEL_TIERS_zh.md  OPEN_SOURCE_INTEGRATION_TARGETS_zh.md  PIPELINE_v2_zh.md  PIPELINE_zh.md  README.md  TASKS_human_matting_pipeline.md  pipeline_cursor.md  pyproject.toml
configs/: class_map.yaml  coconut_benchmark.yaml  coconut_distill_bridge.yaml  coconut_relabel.yaml  code_targets.yaml  data.yaml  datasets.yaml  demo.yaml  demo_relabel.yaml  models.yaml  pipeline.yaml  project.yaml  qa_schema.yaml  reference_integrations.yaml  relabel.yaml
doc/: AGENTS_human_matting_pipeline.md  CODEMAP_zh.md  DATASET_STRATEGY_zh.md  LABEL_SPEC_zh.md  PIPELINE_zh.md  PROJECT_PLAN_human_matting_pipeline.md  README.md
requirements/: base.txt  dev.txt
scripts/: export_accept_coconut_distill.sh  run_coconut_benchmark.sh  run_coconut_compare.sh  run_coconut_relabel_e2e.sh  run_demo_pipeline.sh  run_demo_relabel_pipeline.sh  run_gpu_validation_when_idle.sh
tests/: test_adapters_base.py  test_adapters_templates.py  test_adaptive_trimap.py  test_alpha_metrics.py  test_benchmark_bridge.py  test_benchmark_compare_production.py  test_benchmark_resummarize.py  test_boundary_metrics.py  test_cli.py  test_cli_adapters.py  test_coconut_benchmark.py  test_coconut_distill_bridge.py  test_coconut_sample.py  test_concrete_adapter_registry.py  test_config.py  test_demo_pipeline.py  test_detection_and_mmagic_adapters.py  test_diffusion_adapters.py  test_dummy_labeler.py  (+27 more)
(+132 files in other folders)
